Fix spacing of message meta without controls

--- a/app/assets/stylesheets/components/_bucket.sass
+++ b/app/assets/stylesheets/components/_bucket.sass
@@ -18,6 +18,16 @@
 //
 // *************************************
 
+// -------------------------------------
+//   Variables
+// -------------------------------------
+
+$bucket-space: 1.25em !default
+
+// -------------------------------------
+//   Base
+// -------------------------------------
+
 .bucket
   display: flex
 
@@ -43,7 +53,7 @@
 
 .bucket-media
   flex-shrink: 0
-  margin-right: $b-space
+  margin-left: $bucket-space
 
   > img
     display: block
